--- a/CleanArchitecture.BlazorUI/Layout/NavMenu.razor
+++ b/CleanArchitecture.BlazorUI/Layout/NavMenu.razor
@@ -19,6 +19,42 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Leave Types
             </NavLink>
         </div>
+        <AuthorizeView>
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link">
+                        <span class="oi oi-person" aria-hidden="true"></span> @context.User?.Identity?.Name
+                    </NavLink>
+                </div>
+                <div>
+                    <NavLink class="nav-link" href="logout">
+                        <span class="oi oi-arrow-circle-left" aria-hidden="true"></span> Logout
+                    </NavLink>
+                </div>
+                <div>
+                    <NavLink class="nav-link" href="leavetypes/">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Types
+                    </NavLink>
+                </div>
+                <div>
+                    <NavLink class="nav-link" href="leaverequests/">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Requests
+                    </NavLink>
+                </div>
+            </Authorized>
+            <NotAuthorized>
+                <div>
+                    <NavLink class="nav-link" href="register">
+                        <span class="oi oi-person" aria-hidden="true"></span> Register
+                    </NavLink>
+                </div>
+                <div>
+                    <NavLink class="nav-link" href="login">
+                        <span class="oi oi-account-login" aria-hidden="true"></span> Login
+                    </NavLink>
+                </div>
+            </NotAuthorized>
+        </AuthorizeView>
         @* <div class="nav-item px-3"> *@
         @*     <NavLink class="nav-link" href="counter"> *@
         @*         <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter *@
