--- a/CleanArchitecture.BlazorUI/Pages/Home.razor
+++ b/CleanArchitecture.BlazorUI/Pages/Home.razor
@@ -2,6 +2,17 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1 class="text-center" >Welcome to HR Leave management System</h1>
+<br/>
+<br/>
 
-Welcome to your new app.
+<AuthorizeView>
+    <Authorized>
+        <button class="btn btn-danger" @onclick="Logout">Logout</button>
+    </Authorized>
+    <NotAuthorized>
+        <button class="btn btn-success" @onclick="GoToLogin">Login</button>
+        ||
+        <button class="btn btn-primary" @onclick="GoToRegister">Register</button>
+    </NotAuthorized>
+</AuthorizeView>
