--- a/CleanArchitecture.BlazorUI/_Imports.razor
+++ b/CleanArchitecture.BlazorUI/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using CleanArchitecture.BlazorUI
 @using CleanArchitecture.BlazorUI.Layout
+@using CleanArchitecture.BlazorUI.Models
+@using CleanArchitecture.BlazorUI.Shared
+@using Microsoft.AspNetCore.Components.Authorization
