--- a/CleanArchitecture.BlazorUI/Layout/NavMenu.razor
+++ b/CleanArchitecture.BlazorUI/Layout/NavMenu.razor
@@ -14,11 +14,6 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="leavetypes/">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Leave Types
-            </NavLink>
-        </div>
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
@@ -36,12 +31,24 @@
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Types
                     </NavLink>
                 </div>
-                <div>
-                    <NavLink class="nav-link" href="leaverequests/">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Requests
-                    </NavLink>
-                </div>
             </Authorized>
+        </AuthorizeView>
+        <AuthorizeView Roles="Employee">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="leaverequest/employeeindex">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Requests
+                </NavLink>
+            </div>
+        </AuthorizeView>
+        <AuthorizeView Roles="Administrator">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="leaverequest/">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Leave Requests
+                </NavLink>
+            </div>
+        </AuthorizeView>
+        
+        <AuthorizeView>
             <NotAuthorized>
                 <div>
                     <NavLink class="nav-link" href="register">
@@ -55,6 +62,7 @@
                 </div>
             </NotAuthorized>
         </AuthorizeView>
+
         @* <div class="nav-item px-3"> *@
         @*     <NavLink class="nav-link" href="counter"> *@
         @*         <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter *@
