add blazored Toast and serilog

--- a/CleanArchitecture.BlazorUI/_Imports.razor
+++ b/CleanArchitecture.BlazorUI/_Imports.razor
@@ -11,3 +11,5 @@
 @using CleanArchitecture.BlazorUI.Models
 @using CleanArchitecture.BlazorUI.Shared
 @using Microsoft.AspNetCore.Components.Authorization
+@using Blazored.Toast
+@using Blazored.Toast.Services
