--- a/CleanArchitecture.BlazorUI/Layout/MainLayout.razor
+++ b/CleanArchitecture.BlazorUI/Layout/MainLayout.razor
@@ -1,4 +1,13 @@
 ﻿@inherits LayoutComponentBase
+@using Blazored.Toast.Configuration
+
+<BlazoredToasts Position="ToastPosition.TopRight"
+                Timeout="10"
+                IconType="IconType.FontAwesome"
+                SuccessIcon="success-toast-override"
+                ErrorIcon="fa fa-bug"
+                SuccessClass="fa fa-thumbs-up" />
+
 <div class="page">
     <div class="sidebar">
         <NavMenu/>
